[project]
name = "nursing-job-notifier"
version = "0.1.0"
description = "Scrapes a webpage for a target string and sends email notifications"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "google-auth>=2.35",
    "requests>=2.32",

]

[project.scripts]
notify = "notifier:main"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "types-beautifulsoup4>=4.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
untyped_calls_exclude = [
    "google.oauth2.credentials",
    "google.auth.transport.requests",
]
